force-app/main/default/objects/Opportunity/fields/NDANameAuto__c.field-meta.xml
<CustomField>
    <fullName>NDANameAuto__c</fullName>
    <formula>CASE(SoWLanguage__c ,
'English',"Mutual NDA between "&amp;Account.Name&amp;" EMPAUA",
'German',"Geheimhaltungsvereinbarung zwischen "&amp;Account.Name&amp;" EMPAUA",
"Mutual NDA between "&amp;Account.Name&amp;" EMPAUA"
)</formula>
    <inlineHelpText>Field for automatically naming the NDA in Conga / Docusign.</inlineHelpText>
    <label>NDA Name</label>
    <type>Text</type>
</CustomField>