force-app/main/default/objects/Opportunity/fields/New_Joiner_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Joiner_Project_Status__c</fullName>
    <label>New Joiner Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Potential/Needs Matching</fullName>
            </value>
            <value>
                <fullName>New Joiner Placed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>