force-app/main/default/objects/Opportunity/fields/NewCustomerOppAuto__c.field-meta.xml
<CustomField>
    <fullName>NewCustomerOppAuto__c</fullName>
    <description>Used for reporting to see the Bookings a Customer does within the frst 30 Days</description>
    <formula>Account.Customer_Won_Date__c +30&gt;CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Customer Opp</label>
    <type>Checkbox</type>
</CustomField>