force-app/main/default/objects/Opportunity/fields/NextOpenInvoiceID__c.field-meta.xml
<CustomField>
    <fullName>NextOpenInvoiceID__c</fullName>
    <description>Used to attach Expense Line Items to the next Open Invoice. Filled by DLRS</description>
    <label>NextOpenInvoiceID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>