force-app/main/default/objects/Opportunity/fields/NoticeDate__c.field-meta.xml
<CustomField>
    <fullName>NoticeDate__c</fullName>
    <description>If empty, MILESTONES_APEX will generate monthly invoices with the hours defined in MonthlyAllowance__c.</description>
    <inlineHelpText>If an ongoing MS has been terminated by the client, please enter the Notice Date here so no additional invoices are sent to the client. The Notice Date can only be Last day of the month.</inlineHelpText>
    <label>Notice Date</label>
    <type>Date</type>
</CustomField>