force-app/main/default/objects/Opportunity/fields/NrOfPayments__c.field-meta.xml
<CustomField>
    <fullName>NrOfPayments__c</fullName>
    <description>Used on Contract &amp; to create Invoices</description>
    <label>Nr of Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>