force-app/main/default/objects/Opportunity/fields/NumberDaysCurrentStageAuto__c.field-meta.xml
<CustomField>
    <fullName>NumberDaysCurrentStageAuto__c</fullName>
    <formula>IF(IsClosed, 0, (Today()- DATEVALUE( LastStageChange__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days in current Stage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>