force-app/main/default/objects/Opportunity/fields/NumberDaysLastActivityAuto__c.field-meta.xml
<CustomField>
    <fullName>NumberDaysLastActivityAuto__c</fullName>
    <formula>IF(IsClosed, NULL, (Today()- LastActivityDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days since last activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>