force-app/main/default/objects/Opportunity/fields/NumberInvoices__c.field-meta.xml
<CustomField>
    <fullName>NumberInvoices__c</fullName>
    <description>Will define in MILESTONES_APEX how many invoices will be inserted. User enters value on LWC INSERT_MILESTONES_LWC for ProjectType__c = 'Time &amp; Materials', 'Managed Services' or 'Maintenance' .</description>
    <inlineHelpText>States how many invoices will be generated out of the milestones. Per Milestone one invoice is generated. Must be filled for project type "Time &amp; Materials", "Managed Services" and "Maintenance".</inlineHelpText>
    <label>Number Invoices</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>