force-app/main/default/objects/Opportunity/fields/NumberOfMonthlyPaymentsAuto__c.field-meta.xml
<CustomField>
    <fullName>NumberOfMonthlyPaymentsAuto__c</fullName>
    <formula>IF( 
TEXT( NrOfPayments__c ) != "Monthly", NULL, 
ProjectDurationMonthAuto__c)</formula>
    <label>Number Of Monthly Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>