force-app/main/default/objects/Opportunity/fields/OpportunityAgeAuto__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAgeAuto__c</fullName>
    <formula>IF(IsClosed,(CloseDate-DATEVALUE(CreatedDate)),Today()- DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How old is the opp (Days from Created to Today)</inlineHelpText>
    <label>Opportunity Age (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>