force-app/main/default/objects/Opportunity/fields/OpportunityNumberAuto__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNumberAuto__c</fullName>
    <displayFormat>EMP-{YY}{00000}</displayFormat>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>