force-app/main/default/objects/Opportunity/fields/OriginalOpportunityValuebeforeCR__c.field-meta.xml
<CustomField>
    <fullName>OriginalOpportunityValuebeforeCR__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Original Opportunity Value (before CR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>