force-app/main/default/objects/Opportunity/fields/PaymentSplit__c.field-meta.xml
<CustomField>
    <fullName>PaymentSplit__c</fullName>
    <description>Used to create the Invoices for the Opportunity</description>
    <label>Payment Split</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NrOfPayments__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>25% / 75%</fullName>
            </value>
            <value>
                <fullName>50% / 50%</fullName>
            </value>
            <value>
                <fullName>75% / 25%</fullName>
            </value>
            <value>
                <fullName>25% / 25% / 50%</fullName>
            </value>
            <value>
                <fullName>25% / 50% / 25%</fullName>
            </value>
            <value>
                <fullName>50% / 25% / 25%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
                <isActive>false</isActive>
                <label>25%</label>
            </value>
            <value>
                <fullName>50%</fullName>
                <isActive>false</isActive>
                <label>50%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>