force-app/main/default/objects/Opportunity/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <description>Used to map against Billing.</description>
    <inlineHelpText>Period Allowed for payment in Calendar Days. If you leave this blank, the default value of 14 will be pulled from the Account.</inlineHelpText>
    <label>Payment Terms</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>