force-app/main/default/objects/Opportunity/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <description>Used to create Invoices</description>
    <label>Payment Time</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PaymentSplit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>After Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>