force-app/main/default/objects/Opportunity/fields/PlannedHours__c.field-meta.xml
<CustomField>
    <fullName>PlannedHours__c</fullName>
    <description>Plannend work hours for this project</description>
    <inlineHelpText>Plannend work hours for this project</inlineHelpText>
    <label>Planned Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>