force-app/main/default/objects/Opportunity/fields/Plans__c.field-meta.xml
<CustomField>
    <fullName>Plans__c</fullName>
    <inlineHelpText>Now that you know their company and personal goals, you want to find out what their plans are to achieve those goals.</inlineHelpText>
    <label>Plans</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>