force-app/main/default/objects/Opportunity/fields/PONumber__c.field-meta.xml
<CustomField>
    <fullName>PONumber__c</fullName>
    <inlineHelpText>If the client states a PO Number that is relevant for Invoicing, please state it here.</inlineHelpText>
    <label>PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>