force-app/main/default/objects/Opportunity/fields/PresalesCost__c.field-meta.xml
<CustomField>
    <fullName>PresalesCost__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Delivered Cost in Presales activities based on time entries.</description>
    <label>Presales Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>