force-app/main/default/objects/Opportunity/fields/Previous_Successful_IT_Project_Experienc__c.field-meta.xml
<CustomField>
    <fullName>Previous_Successful_IT_Project_Experienc__c</fullName>
    <inlineHelpText>- Smooth and previously adhered to software timeline
- High levels of testing experience
- Low levels of scope creep on previous projects
- Agile experience
- Prior experience with Risk Management</inlineHelpText>
    <label>Previous Successful IT Project Experienc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>