force-app/main/default/objects/Opportunity/fields/PreviousEngagements__c.field-meta.xml
<CustomField>
    <fullName>PreviousEngagements__c</fullName>
    <label>Previous Engagements?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>