force-app/main/default/objects/Opportunity/fields/ProjectDurationMonthAuto__c.field-meta.xml
<CustomField>
    <fullName>ProjectDurationMonthAuto__c</fullName>
    <formula>( ProjectEndDateTrig__c  - ProjectStartDateTrig__c )  /  30.4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Duration (Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>