force-app/main/default/objects/Opportunity/fields/ProjectEndDateTrig__c.field-meta.xml
<CustomField>
    <fullName>ProjectEndDateTrig__c</fullName>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>