force-app/main/default/objects/Opportunity/fields/ProjectManagers__c.field-meta.xml
<CustomField>
    <fullName>ProjectManagers__c</fullName>
    <label>Project Managers</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>