force-app/main/default/objects/Opportunity/fields/ProjectStartDateTrig__c.field-meta.xml
<CustomField>
    <fullName>ProjectStartDateTrig__c</fullName>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>