force-app/main/default/objects/Opportunity/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <description>Used to generate Invoices</description>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time &amp; Materials</fullName>
            </value>
            <value>
                <fullName>Turnkey Project</fullName>
                <label>T&amp;M Milestone</label>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Service Block</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>