force-app/main/default/objects/Opportunity/fields/ReceivedAmountLastQuarterTrig__c.field-meta.xml
<CustomField>
    <fullName>ReceivedAmountLastQuarterTrig__c</fullName>
    <description>Gets updated via a scheduled flow (daily, SF08_UpdateOpportunity) to get the paid amount from the Billing Cash Receipts that have been paid last quarter. Needed for Commission Payout.</description>
    <inlineHelpText>Field that can be used to pay out Commission to Opportunity Owner.</inlineHelpText>
    <label>Received Amount Last Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>