force-app/main/default/objects/Opportunity/fields/RelatedWorkshopOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RelatedWorkshopOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Workshop Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related Project Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>