force-app/main/default/objects/Opportunity/fields/ResourcingLastUpdatedTrig__c.field-meta.xml
<CustomField>
    <fullName>ResourcingLastUpdatedTrig__c</fullName>
    <description>Automatically updated, when the "Suggested Team" is updated.</description>
    <inlineHelpText>Automatically updated, when the "Suggested Team" is updated.</inlineHelpText>
    <label>Resourcing Last Updated</label>
    <type>DateTime</type>
</CustomField>