force-app/main/default/objects/Opportunity/fields/ResourcingRequirements__c.field-meta.xml
<CustomField>
    <fullName>ResourcingRequirements__c</fullName>
    <label>Resourcing requirements</label>
    <type>TextArea</type>
</CustomField>