force-app/main/default/objects/Opportunity/fields/ResourcingStatusPick__c.field-meta.xml
<CustomField>
    <fullName>ResourcingStatusPick__c</fullName>
    <label>Resourcing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be Resourced</fullName>
            </value>
            <value>
                <fullName>Resourced</fullName>
            </value>
            <value>
                <fullName>To Re-Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>