force-app/main/default/objects/Opportunity/fields/Salesforce_AE__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please enter the Salesforce Account Executive as Contact here. Please be aware that this contact needs to be related to an Account contains "Salesforce" or "salesforce".</inlineHelpText>
    <label>Salesforce AE</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>contains</operation>
            <value>Salesforce,salesforce</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Salesforce AE)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>