force-app/main/default/objects/Opportunity/fields/SalesforceClouds__c.field-meta.xml
<CustomField>
    <fullName>SalesforceClouds__c</fullName>
    <inlineHelpText>Please indicate, which clouds shall be implemented within this project.</inlineHelpText>
    <label>Salesforce Cloud(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesforceClouds</valueSetName>
    </valueSet>
</CustomField>