force-app/main/default/objects/Opportunity/fields/SalesMethodologyFramework__c.field-meta.xml
<CustomField>
    <fullName>SalesMethodologyFramework__c</fullName>
    <formula>HYPERLINK("https://docs.google.com/a/empaua.com/presentation/d/18rtvi5-JLiFcDP5lZzy04WsOZEsQJNGfAqllQjTJCQY/edit?usp=sharing", "Link" , "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field refers to the Sales Methodology document, if in doubt, please check the link before filling up.</inlineHelpText>
    <label>Sales Methodology Framework</label>
    <type>Text</type>
</CustomField>