force-app/main/default/objects/Opportunity/fields/ScopeOfServices__c.field-meta.xml
<CustomField>
    <fullName>ScopeOfServices__c</fullName>
    <inlineHelpText>Will be included in the first attachment to the contract.</inlineHelpText>
    <label>Scope of Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>