force-app/main/default/objects/Opportunity/fields/SoWCongaTemplateGroupAuto__c.field-meta.xml
<CustomField>
    <fullName>SoWCongaTemplateGroupAuto__c</fullName>
    <description>Sets the Conga Template Category for SoW Templates based on EMPAUA Entity.</description>
    <formula>CASE( DeliveringEntityRef__r.CompanyNameExternal__c ,
'EMPAUA Ltd.','UK',
'EMPAUA GmbH','DE',
'EMPAUA GmbH (CH)','CH',
''
)
&amp;" "&amp;
CASE( ProjectType__c ,
'Maintenance','Managed Service',
'Managed Services','Managed Service',
''
)
&amp;" "&amp;
CASE( SoWLanguage__c  ,
'German','German',
'English','English',
'English'
)</formula>
    <inlineHelpText>Sets the Conga Template Category for SoW Templates based on EMPAUA Entity.</inlineHelpText>
    <label>SoW Conga Template Group</label>
    <type>Text</type>
</CustomField>