force-app/main/default/objects/Opportunity/fields/SoWDate__c.field-meta.xml
<CustomField>
    <fullName>SoWDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date of the SoW Version (!). Used in Conga.</description>
    <inlineHelpText>Date of the SoW Version (!). Used in Conga.</inlineHelpText>
    <label>SoW Date</label>
    <type>Date</type>
</CustomField>