force-app/main/default/objects/Opportunity/fields/SoWDocusignEmailBodyAuto__c.field-meta.xml
<CustomField>
    <fullName>SoWDocusignEmailBodyAuto__c</fullName>
    <description>Email body used on Docusign as default.</description>
    <formula>CASE(SoWLanguage__c ,
'English',"I am sending you this request for your electronic signature, please review and electronically sign by following the link above.",
'German',"Unterlagen erfordern Ihre Signatur. Bitte sehen Sie die Unterlagen ein und signieren Sie sie elektronisch anhand des obenstehenden Links.",
"I am sending you this request for your electronic signature, please review and electronically sign by following the link above."
)</formula>
    <inlineHelpText>Email body used on Docusign as default.</inlineHelpText>
    <label>SoW Docusign Email Body</label>
    <type>Text</type>
</CustomField>