force-app/main/default/objects/Opportunity/fields/SoWDocusignEmailSubjectAuto__c.field-meta.xml
<CustomField>
    <fullName>SoWDocusignEmailSubjectAuto__c</fullName>
    <description>Email subject used on Docusign as default.</description>
    <formula>SoWNameCongaAuto__c &amp;" - "&amp;
CASE(SoWLanguage__c ,
'English',"Please Review and Sign",
'German',"Bitte einsehen und unterzeichnen",
"Please Review and Sign"
)</formula>
    <inlineHelpText>Email subject used on Docusign as default.</inlineHelpText>
    <label>SoW Docusign Email Subject</label>
    <type>Text</type>
</CustomField>