force-app/main/default/objects/Opportunity/fields/SoWExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>SoWExpiryDate__c</fullName>
    <description>Date of the SoW Expiry, if specified with customer. Not (!) used in Conga.</description>
    <inlineHelpText>Date of the SoW Expiry, if specified with customer. Not (!) used in Conga.</inlineHelpText>
    <label>SoW Expiry Date</label>
    <type>Date</type>
</CustomField>