force-app/main/default/objects/Opportunity/fields/SoWLanguage__c.field-meta.xml
<CustomField>
    <fullName>SoWLanguage__c</fullName>
    <description>Language of the SoW or the Change Request. Used in Conga.</description>
    <inlineHelpText>Language of the SoW or the Change Request. Used in Conga.</inlineHelpText>
    <label>SoW Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>