force-app/main/default/objects/Opportunity/fields/SoWNameCongaAuto__c.field-meta.xml
<CustomField>
    <fullName>SoWNameCongaAuto__c</fullName>
    <description>Field for Conga file naming.</description>
    <formula>CASE(SoWLanguage__c ,
'English',OpportunityNumberAuto__c&amp;" - Contract for "&amp; Account.Name &amp;" - "&amp; SoWVersion__c,
'German',OpportunityNumberAuto__c&amp;" - Vertrag für "&amp; Account.Name &amp;" - "&amp; SoWVersion__c,
OpportunityNumberAuto__c&amp;" - Contract for "&amp; Account.Name &amp;" - "&amp; SoWVersion__c
)</formula>
    <label>SoW Name Conga</label>
    <type>Text</type>
</CustomField>