force-app/main/default/objects/Opportunity/fields/SoWSentOnTrig__c.field-meta.xml
<CustomField>
    <fullName>SoWSentOnTrig__c</fullName>
    <description>Automatically populated from Conga Composer (SoW Selected)</description>
    <inlineHelpText>Automatically populated from Conga Composer (SoW Selected)</inlineHelpText>
    <label>SoW Sent On</label>
    <type>Date</type>
</CustomField>