force-app/main/default/objects/Opportunity/fields/SoWSignedOnText__c.field-meta.xml
<CustomField>
    <fullName>SoWSignedOnText__c</fullName>
    <description>Technical field for Docusign Write Back.</description>
    <inlineHelpText>Technical field for Docusign Write Back.</inlineHelpText>
    <label>SoW Signed On Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>