force-app/main/default/objects/Opportunity/fields/SoWSignedOnTextAuto__c.field-meta.xml
<CustomField>
    <fullName>SoWSignedOnTextAuto__c</fullName>
    <description>Docusign Write Back Conversion Field.</description>
    <formula>IF(
SoWSignedOnText__c = "",NULL,
DATE(
VALUE(RIGHT(SoWSignedOnText__c,4)),
VALUE(MID( SoWSignedOnText__c ,4,2)),
VALUE(LEFT(SoWSignedOnText__c, 2))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Docusign Write Back Conversion Field.</inlineHelpText>
    <label>SoW Signed On Text Auto</label>
    <type>Date</type>
</CustomField>