force-app/main/default/objects/Opportunity/fields/SoWSignedOnTrig__c.field-meta.xml
<CustomField>
    <fullName>SoWSignedOnTrig__c</fullName>
    <inlineHelpText>Automatically populated from Docusign when signature is received.</inlineHelpText>
    <label>SoW Signed On</label>
    <type>Date</type>
</CustomField>