force-app/main/default/objects/Opportunity/fields/SoWVersion__c.field-meta.xml
<CustomField>
    <fullName>SoWVersion__c</fullName>
    <defaultValue>'v1.0'</defaultValue>
    <description>Version text and number of the SoW or the Change Request. Used in Conga.</description>
    <inlineHelpText>Version text and number of the SoW or the Change Request. Used in Conga.</inlineHelpText>
    <label>SoW Version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>