force-app/main/default/objects/Opportunity/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Start Date/Kickoff Date of a project</description>
    <inlineHelpText>When is this project starting?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>