force-app/main/default/objects/Opportunity/fields/Strong_reason_for_project__c.field-meta.xml
<CustomField>
    <fullName>Strong_reason_for_project__c</fullName>
    <label>Strong reason for project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>