force-app/main/default/objects/Opportunity/fields/SuggestedTeam__c.field-meta.xml
<CustomField>
    <fullName>SuggestedTeam__c</fullName>
    <description>Preliminary project team as discussed between Sales Manager and Operations Team.</description>
    <inlineHelpText>Preliminary project team as discussed between Sales Manager and Operations Team.</inlineHelpText>
    <label>Suggested Team</label>
    <type>TextArea</type>
</CustomField>