force-app/main/default/objects/Opportunity/fields/Suitable_Budget__c.field-meta.xml
<CustomField>
    <fullName>Suitable_Budget__c</fullName>
    <inlineHelpText>Willing and able to spend</inlineHelpText>
    <label>Suitable Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>