force-app/main/default/objects/Opportunity/fields/SumQuantityOppProductAuto__c.field-meta.xml
<CustomField>
    <fullName>SumQuantityOppProductAuto__c</fullName>
    <description>summing up hours for Opportunity Products</description>
    <label>Sum Quantity Opp Product</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>