force-app/main/default/objects/Opportunity/fields/TaskRayProjectRecordTypeIdAuto__c.field-meta.xml
<CustomField>
    <fullName>TaskRayProjectRecordTypeIdAuto__c</fullName>
    <description>Helper field for TaskRay Project creation on Opportunity Closed Won.</description>
    <formula>CASE(
  RecordType.DeveloperName  ,
"Maintenance","01224000000TfSA",
"Project","01224000000TfSB",
"Workshop","01224000000TfSC",
"01224000000TfSB")</formula>
    <inlineHelpText>Helper field for TaskRay Project creation on Opportunity Closed Won.</inlineHelpText>
    <label>TaskRay Project Record Type Id</label>
    <type>Text</type>
</CustomField>