force-app/main/default/objects/Opportunity/fields/TaskRayProjectRef__c.field-meta.xml
<CustomField>
    <fullName>TaskRayProjectRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Hidden</inlineHelpText>
    <label>TaskRay Project</label>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>