force-app/main/default/objects/Opportunity/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <inlineHelpText>It’s all about timing. The key takeaway is, if the prospect doesn’t have the bandwidth to deal with these issues or has other priorities, their timeline might be some point in the future. You have to make a decision whether to invest time now or not.</inlineHelpText>
    <label>Timeline</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>