force-app/main/default/objects/Opportunity/fields/TimestampForWorkshopClose__c.field-meta.xml
<CustomField>
    <fullName>TimestampForWorkshopClose__c</fullName>
    <description>This timestamp is set when the opportunity reaches the stage "Workshop closed"</description>
    <label>Timestamp for Workshop close</label>
    <type>Date</type>
</CustomField>