force-app/main/default/objects/Opportunity/fields/TwiceHoursPerMonthAuto__c.field-meta.xml
<CustomField>
    <fullName>TwiceHoursPerMonthAuto__c</fullName>
    <formula>HoursPerMonthAuto__c * 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Twice Hours Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>