force-app/main/default/objects/Opportunity/fields/WebsiteDetailSourcePick__c.field-meta.xml
<CustomField>
    <fullName>WebsiteDetailSourcePick__c</fullName>
    <description>Which type of contact form was filled out?</description>
    <inlineHelpText>Which type of contact form was filled out?</inlineHelpText>
    <label>Website Detail Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Page</fullName>
            </value>
            <value>
                <fullName>Book a Demo</fullName>
            </value>
            <value>
                <fullName>Book a Workshop</fullName>
            </value>
            <value>
                <fullName>Health Check</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Whitepaper</fullName>
            </value>
            <value>
                <fullName>Event Landingpage</fullName>
            </value>
            <value>
                <fullName>Cheat Sheet</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Accounting Seed</fullName>
            </value>
            <value>
                <fullName>Digital Transformation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>