force-app/main/default/objects/Opportunity/fields/WhatAreTheyTryingToAchieve__c.field-meta.xml
<CustomField>
    <fullName>WhatAreTheyTryingToAchieve__c</fullName>
    <inlineHelpText>What are trying to achieve with this implementation?</inlineHelpText>
    <label>What are they trying to achieve?</label>
    <type>TextArea</type>
</CustomField>